# aws-discover

./: aws-discover.cabal  discovery.pgsql  flake.nix  resources.json
app/: Main.hs  Orphans.hs  Tags.hs
lib/: Config.hs  Database.hs
lib/Database/: Match.hs  Types.hs
lib/Graph/: Properties.hs
src/discover/: GEXF.hs  Graph.hs  Main.hs  Orphans.hs  Tags.hs
src/discover/AWS/: Instances.hs
src/discover/AWS/CloudFormation/: Orphans.hs  StackResources.hs  Stacks.hs
src/discover/AWS/EC2/: Instances.hs  Orphans.hs  SecurityGroups.hs  Subnets.hs  Vpcs.hs
src/discover/AWS/Lambda/: Functions.hs  GetFunctions.hs  Orphans.hs
src/discover/AWS/RDS/: Instances.hs  Orphans.hs
src/discover/AWS/ResourceGroupsTagging/: Orphans.hs  Resources.hs
src/discover/AWS/SecretsManager/: Orphans.hs  Secrets.hs
src/serverless/: Main.hs
