cabal-version:      2.4
name:               aws-discover
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Shaun Sharples
maintainer:         shaun.sharples@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:      -Wall -O
  build-depends:
    , base
    , data-default
    , hasbolt
    , resourcet
    , text
    , yaml
  exposed-modules:
    Config
    Database

executable aws-discover
  main-is:          Main.hs
  hs-source-dirs:   src/discover
  default-language: Haskell2010
  ghc-options:      -Wall -O -threaded
  other-modules:    Orphans
                  , Tags
  build-depends:
      aws-discover
    , base
    , aeson
    , amazonka
    , amazonka-apigateway
    , amazonka-apigatewayv2
    , amazonka-ec2
    , amazonka-lambda
    , amazonka-rds
    , amazonka-resourcegroupstagging
    , amazonka-s3
    , amazonka-secretsmanager
    , async
    , bytestring
    , conduit
    , containers
    , exceptions
    , hasbolt
    , resourcet
    , scientific
    , text
    , unordered-containers
    , yaml

-- executable serverless-import
--   main-is:          Main.hs
--   hs-source-dirs:   src/serverless
--   default-language: Haskell2010
--   ghc-options:      -Wall -O -threaded
--   build-depends:
--       aws-discover
--     , base
--     , aeson
--     , bytestring
--     , containers
--     , data-default
--     , exceptions
--     , hasbolt
--     , resourcet
--     , scientific
--     , text
--     , unordered-containers
--     , yaml
