cabal-version:      2.4
name:               aws-discover
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Shaun Sharples
maintainer:         shaun.sharples@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:      -Wall -O
  build-depends:
    , base
    , aeson
    , algebraic-graphs
    , amazonka-ec2
    , contravariant-extras
    , data-default
    , hasbolt
    , hashable
    , hasql >= 1.6.2
    , resourcet
    , text
    , unordered-containers
    , uuid
    , vector
    , yaml
  exposed-modules:
    Config
    Database
    Database.Types
    Graph.Properties

executable aws-discover
  main-is:          Main.hs
  hs-source-dirs:   src/discover
  default-language: Haskell2010
  ghc-options:      -Wall -O -threaded
  other-modules:    Orphans
                  -- , Tags
                  -- , GEXF
                  -- , AWS.Instances
                  , Graph
  build-depends:
      aws-discover
    , base
    , aeson
    , aeson-pretty
    , algebraic-graphs
    , amazonka
    , amazonka-apigateway
    , amazonka-apigatewayv2
    , amazonka-cloudwatch-logs
    , amazonka-ec2
    , amazonka-lambda
    , amazonka-rds
    , amazonka-resourcegroupstagging
    , amazonka-s3
    , amazonka-secretsmanager
    , async
    , bytestring
    , conduit
    , containers
    , data-default
    , exceptions
    , hasbolt
    , hashable
    , hasql >= 1.6.2
    , resourcet
    , scientific
    , text
    , unordered-containers
    , uuid
    , xml-conduit
    , yaml