cabal-version: 2.4
name:          aws-discover
version:       0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:        Shaun Sharples
maintainer:    shaun.sharples@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:      -Wall -O
  build-depends:
    , aeson
    , base
    , bytestring
    , hasql                     >=1.6.2
    , hasql-dynamic-statements  >=0.3.1.2
    , hasql-implicits           >=0.1
    , hasql-pool
    , mtl
    , pipes
    , text
    , unordered-containers
    , yaml

  exposed-modules:
    Config
    Database
    Database.Match
    Database.Types

executable aws-discover
  main-is:          Main.hs
  hs-source-dirs:   src/discover
  default-language: Haskell2010
  ghc-options:      -Wall -O -threaded
  other-modules:
    AWS.EC2.Instances
    AWS.EC2.Orphans
    AWS.EC2.Subnets
    AWS.EC2.Vpcs
    AWS.Lambda.Functions
    AWS.Lambda.Orphans

  build-depends:
    , aeson
    , aeson-pretty
    , amazonka
    , amazonka-apigateway
    , amazonka-apigatewayv2
    , amazonka-cloudwatch-logs
    , amazonka-ec2
    , amazonka-lambda
    , amazonka-rds
    , amazonka-resourcegroupstagging
    , amazonka-s3
    , amazonka-secretsmanager
    , async
    , aws-discover
    , base
    , bytestring
    , conduit
    , containers
    , exceptions
    , hashable
    , scientific
    , text
    , time
    , unordered-containers
